# otlp2records

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: otap-input.md
examples/: bench_log_profile.rs  bench_trace_profile.rs  bench_transform.rs  generate_metric_fixtures.rs
include/: otlp2records.h  otlp2records_ffi.h
src/: convert.rs  error.rs  fast.rs  ffi.rs  fixtures.rs  lib.rs  proto_output.rs  schemas.rs  value.rs  wasm.rs
src/api/: auto.rs  json.rs  logs.rs  metrics.rs  mod.rs  partitioned.rs  traces.rs  types.rs
src/arrow/: builder.rs  mod.rs  partition.rs  schema.rs
src/batch/: context.rs  json.rs  logs.rs  metrics.rs  mod.rs  otap.rs  profile.rs  traces.rs  util.rs  view_json.rs
src/bindings/: ffi.rs  grpc_ffi.rs  wasm.rs
src/decode/: common.rs  format.rs  jsonl.rs  logs.rs  metrics.rs  mod.rs  normalize.rs  traces.rs
src/decode/json/: common.rs  logs.rs  metrics.rs  mod.rs  normalize.rs
src/otap/: decoder.rs  grpc_service.rs  logs.rs  metrics.rs  mod.rs  schema.rs  traces.rs  validation.rs  wire.rs
src/output/: ipc.rs  json.rs  mod.rs  parquet.rs
src/schema/: arrow.rs  defs.rs  field.rs  mod.rs  otap.rs
src/transform/: mod.rs  runtime.rs
src/transform/functions/: core.rs  helpers.rs  mod.rs
src/views/: mod.rs  otlp.rs  pdata.rs
testdata/: metrics_exponential_histogram.pb  metrics_gauge.pb  metrics_histogram.pb  metrics_mixed.pb  metrics_sum.pb  metrics_summary.pb
tests/: api.rs  integration.rs  log_view.rs  normalized_output.rs  otap_logs.rs  otap_metrics.rs  otap_traces.rs  schema_output.rs
tests/fixtures/otap/: logs-initial.bar  logs-initial.otlp  logs-reuse.bar  logs-reuse.otlp  logs-zstd.bar  metrics-initial.bar  metrics-initial.otlp  metrics-reuse.bar  metrics-reuse.otlp  traces-initial.bar  traces-initial.otlp  traces-reuse.bar  traces-reuse.otlp
tools/otap-fixture-gen/: Cargo.toml
tools/otap-fixture-gen/src/: main.rs
vrl/: otlp_exp_histogram.vrl  otlp_gauge.vrl  otlp_histogram.vrl  otlp_logs.vrl  otlp_sum.vrl  otlp_traces.vrl
