[package]
name = "otlp2records"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
description = "Transform OTLP telemetry to Arrow RecordBatches"
keywords = ["opentelemetry", "otlp", "arrow", "observability"]
categories = ["data-structures", "encoding"]
repository = "https://github.com/smithclay/otlp2records"
homepage = "https://github.com/smithclay/otlp2records"
documentation = "https://docs.rs/otlp2records"

[dependencies]
# Decoding
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "logs", "trace", "metrics"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
ordered-float = "4"
base64 = "0.21"

# Arrow
arrow = { version = "54", default-features = false, features = ["ffi", "ipc", "json"] }

# VRL (no stdlib - avoids zstd C dependency)
vrl = { version = "0.26", default-features = false, features = ["compiler", "value"] }

# Utils
thiserror = "2"
const-hex = "1"
once_cell = "1"
chrono-tz = "0.10"
indexmap = "2"

[dependencies.parquet]
version = "54"
optional = true
default-features = false
features = ["arrow"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["rlib", "staticlib"]

[features]
default = []
parquet = ["dep:parquet"]
wasm = ["getrandom/js", "dep:wasm-bindgen"]
ffi = ["dep:cbindgen"]  # Enable C FFI bindings with header generation

[build-dependencies]
vrl = { version = "0.26", default-features = false, features = ["compiler"] }
cbindgen = { version = "0.27", optional = true }

[package.metadata.cbindgen]
language = "C"
cpp_compat = true
include_guard = "OTLP2RECORDS_FFI_H"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
