[package]
name = "otlp2records"
version = "0.8.3"
edition = "2021"
license = "Apache-2.0"
description = "Transform OTLP telemetry to flattened records"
keywords = ["opentelemetry", "otlp", "arrow", "observability"]
categories = ["data-structures", "encoding"]
repository = "https://github.com/smithclay/otlp2records"
homepage = "https://github.com/smithclay/otlp2records"
documentation = "https://docs.rs/otlp2records"

[dependencies]
# Decoding
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "logs", "trace", "metrics"] }
prost = "0.14"
# opentelemetry-proto 0.31 allows tonic 0.14.x, but tonic 0.14.6 raised
# its MSRV to Rust 1.88. Keep the crate buildable on Rust 1.86 until the
# extension distribution toolchain moves forward.
tonic = { version = "=0.14.5", default-features = false, features = ["codegen"] }
tonic-prost = "=0.14.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
ordered-float = "4"
base64 = "0.22"

# Arrow
arrow-array = { version = "58", features = ["ffi"] }
arrow-ipc = "58"
arrow-json = "58"
arrow-schema = { version = "58", features = ["ffi"] }
arrow-select = "58"

# Utils
thiserror = "2"
const-hex = "1"
itoa = "1"
once_cell = "1"
indexmap = "2"

[dependencies.parquet]
version = "58"
optional = true
default-features = false
features = ["arrow"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["rlib", "staticlib"]

[[example]]
name = "pb_to_parquet"
required-features = ["parquet"]

[features]
default = []
parquet = ["dep:parquet"]
wasm = ["getrandom/js", "dep:wasm-bindgen"]
ffi = ["dep:cbindgen"]  # Enable C FFI bindings with header generation

[build-dependencies]
cbindgen = { version = "0.27", optional = true }

[package.metadata.cbindgen]
language = "C"
cpp_compat = true
include_guard = "OTLP2RECORDS_FFI_H"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
