[package]
name = "otlp2records"
version = "0.10.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
description = "Transform OTLP telemetry to flattened records"
keywords = ["opentelemetry", "otlp", "arrow", "observability"]
categories = ["data-structures", "encoding"]
repository = "https://github.com/smithclay/otlp2records"
homepage = "https://github.com/smithclay/otlp2records"
documentation = "https://docs.rs/otlp2records"
exclude = ["tools/otap-fixture-gen"]

[dependencies]
# Decoding
opentelemetry-proto = { version = "0.31", default-features = false, features = ["gen-tonic-messages", "logs", "trace", "metrics"] }
prost = "0.14"
# opentelemetry-proto 0.31 allows tonic 0.14.x, but tonic 0.14.6 raised
# its MSRV to Rust 1.88. Keep the crate buildable on Rust 1.86 until the
# extension distribution toolchain moves forward.
tonic = { version = "=0.14.5", default-features = false, features = ["codegen"] }
tonic-prost = "=0.14.5"
# gRPC ingest server (native-only, behind the `grpc` feature). tokio and tonic's
# transport/server are pulled in only when that feature is enabled, so the base
# build stays synchronous and wasm32-safe.
tokio = { version = "1", optional = true, default-features = false, features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
] }
tokio-stream = { version = "0.1", optional = true, default-features = false, features = [
    "net",
] }
# `rt` brings TaskTracker; CancellationToken is always available. Used to give
# the gRPC server deterministic teardown of in-flight OTAP stream tasks.
tokio-util = { version = "0.7", optional = true, default-features = false, features = [
    "rt",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
ordered-float = "4"
base64 = "0.22"
ciborium = "0.2"

# Arrow
arrow-array = { version = "58", features = ["ffi"] }
arrow-ipc = { version = "58", features = ["lz4"] }
arrow-json = "58"
arrow-schema = { version = "58", features = ["ffi"] }
arrow-select = "58"

# Utils
thiserror = "2"
const-hex = "1"
itoa = "1"
once_cell = "1"
indexmap = "2"

[dependencies.parquet]
version = "58"
optional = true
default-features = false
features = ["arrow"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
# opentelemetry_sdk pulls rand 0.9/getrandom 0.3 through the OTLP signal
# features. Enable its browser backend; .cargo/config.toml selects it only for
# wasm32-unknown-unknown.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["rlib", "staticlib"]

[[example]]
name = "pb_to_parquet"
required-features = ["parquet"]

[features]
default = []
parquet = ["dep:parquet"]
wasm = ["getrandom/js", "dep:wasm-bindgen"]
# Enable the C FFI bindings module. The C ABI is the hand-written, canonical
# include/otlp2records.h; there is no generated header.
ffi = []
# Upstream Producer defaults to Zstandard. Arrow's Zstandard backend compiles
# bundled C and therefore needs a wasm-capable C toolchain for wasm32 builds.
otap-zstd = ["arrow-ipc/zstd"]
# Native gRPC ingest server. Embeds a tonic server serving all six signals over
# OTLP/gRPC unary Export and OTAP/Arrow bidi streaming, and exposes it over the C
# ABI. Pulls in a tokio runtime, tonic's transport/server, tokio-util (deterministic
# stream-task teardown), and opentelemetry-proto's collector *service* stubs
# (gen-tonic, on top of the message types already enabled). Never enabled for
# wasm32 (no tokio runtime or sockets there); selected by the extension's CMake
# only for native targets.
grpc = [
    "ffi",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "tonic/server",
    "tonic/router",
    "tonic/transport",
    "opentelemetry-proto/gen-tonic",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
